# vsgwx

./: CMakeLists.txt
include/: wxVsgWindow.h
src/: si.cpp  wxVsgWindow.cpp
